# CurrencyFinalProject

./: .gitignore  CMakeLists.txt  README.md  allowed_countries.csv  crypto_exchange_rates.csv  currency.cpp  currency.h  currency_parser.cpp  currency_parser.h  exchange_rates.csv  fiat_exchange_rates.csv  magic_exchange_rates.csv
data/: fiat_exchange_rates.csv
headers/: currency.h  currency_parser.h  text_formatting.h
source/: currency.cpp  currency_parser.cpp  main.cpp  text_formatting.cpp
test/: CMakeLists.txt  currency_test.cpp
